--- a/style.css
+++ b/style.css
@@ -1,61 +1,66 @@
-body  {
-    font-family: 'Quicksand', sans-serif;
-    margin: 0;
+body {
+  font-family: "Quicksand", sans-serif;
+  margin: 0;
 }
 section {
-    display: flex;
+  display: flex;
 }
 .title {
-    font-size: 50px;
-    text-align: center;
+  font-size: 50px;
+  text-align: center;
 }
 h2 {
-    font-size: 40px;
+  font-size: 40px;
 }
 p {
-    opacity: .7;
+  opacity: 0.7;
 }
 .half-width p {
-    font-size: 17px;
-    font-weight: 600;
+  font-size: 17px;
+  font-weight: 600;
 }
 .half-width {
-    width: 50%;
-    padding-left: 2%;
+  width: 50%;
+  padding-left: 2%;
 }
 .half-width img {
-    width: 60%;
-    padding-left: 145px;
+  width: 60%;
+  padding-left: 145px;
 }
 .link-button {
-    text-decoration: none;
-    padding: 10px 35px;
-    background-image: linear-gradient(blue, purple);
-    color: white;
-    border-radius: 20px;
-    font-weight: bold;
+  text-decoration: none;
+  padding: 10px 35px;
+  background: rgb(222, 11, 11);
+  background: linear-gradient(
+    90deg,
+    rgba(222, 11, 11, 1) 7%,
+    rgba(7, 136, 24, 1) 78%
+  );
+  color: white;
+  border-radius: 20px;
+  font-weight: bold;
 }
 .all-divisions {
-    text-align: center;
-    padding-bottom: 100px;
-    flex-wrap: wrap;
-    display: flex;
+  text-align: center;
+  padding-bottom: 100px;
+  flex-wrap: wrap;
+  display: flex;
 }
 .divisions {
-    width: 300px;
-    margin: 39px;
-    padding-bottom: 45px;
-    box-shadow: 10px 10px 40px gray;
+  width: 300px;
+  margin: 39px;
+  padding-bottom: 45px;
+  box-shadow: 10px 10px 40px gray;
 }
 .divisions img {
-    width: 100%;
-    height: 185px;
+  width: 100%;
+  height: 185px;
 }
 .divisions p {
-    text-align: justify;
-    padding: 15px;
+  text-align: justify;
+  padding: 15px;
 }
 footer p {
-    text-align: center;
-    font-weight: bold;
+  text-align: center;
+  font-weight: bold;
 }
